# GN_BUILD_FOR_STM32

./: .gitignore  Dockerfile  README.md
.github/workflows/: test.yml
Projects/NUCLEO-WB55RG/Examples/Blink_LED/: .gn  BUILD.gn  args.gni
Projects/NUCLEO-WB55RG/Examples/Blink_LED/Src/: main.c
Projects/build_overrides/: build.gni  root.gni
build_overrides/: build.gni  root.gni
scripts/: run_test.sh
